apps/minio/service.yaml
# filepath: e:\Projetos\Portifolio\Infra-lakehouse\apps\minio\minio-ingress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio # Or choose a new name to avoid conflict
  namespace: minio
spec:
  clusterIP: None
  selector:
    app: minio # Make sure this selector matches your MinIO pod labels
  ports:
    - name: console
      protocol: TCP
      port: 9001 # External port the LoadBalancer will listen on
      targetPort: 9001 # Target port on your MinIO pods for the console
    - name: api
      protocol: TCP
      port: 9000 # External port for the API
      targetPort: 9000 # Target port on your MinIO pods for the API
