apps/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
  - host: minio.vanir-proxmox.duckdns.org
    http:
      paths:
      - path: /console(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 9001
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 9000
